Fix spacing of accordion and bio sections

--- a/src/assets/custom/css/_sass/_accordion.scss
+++ b/src/assets/custom/css/_sass/_accordion.scss
@@ -7,9 +7,16 @@
 .accordion__panel {
   border-bottom: 1px solid $grey--light;
 
+  &:last-of-type {
+    border-bottom: none;
+  }
+
   @include small-and-medium {
     min-height: 2em;
     margin-bottom: 10px;
+    &:last-of-type {
+      margin-bottom: 0;
+    }
   }
 }
 
